c7.out
   Compiling rp-pico v0.7.0 (/home/pi/rp-hal-boards/boards/rp-pico)
error: expected one of `!`, `)`, `+`, `,`, or `::`, found `;`
  --> boards/rp-pico/examples/b_blinky.rs:92:30
   |
92 |     rp2040_hal::I2C<I2C,Pins>;
   |                              ^ expected one of `!`, `)`, `+`, `,`, or `::`

error[E0412]: cannot find type `I2C` in this scope
  --> boards/rp-pico/examples/b_blinky.rs:92:21
   |
92 |     rp2040_hal::I2C<I2C,Pins>;
   |                     ^^^ not found in this scope
   |
help: consider importing one of these items
   |
6  | use crate::hal::I2C;
   |
6  | use crate::hal::gpio::I2C;
   |
6  | use i2c_pio::I2C;
   |
6  | use rp2040_hal::I2C;
   |
     and 1 other candidate

error[E0412]: cannot find type `Pins` in this scope
  --> boards/rp-pico/examples/b_blinky.rs:92:25
   |
92 |     rp2040_hal::I2C<I2C,Pins>;
   |                         ^^^^ not found in this scope
   |
help: consider importing one of these items
   |
6  | use crate::hal::gpio::Pins;
   |
6  | use crate::hal::gpio::qspi::Pins;
   |
6  | use crate::hal::uart::Pins;
   |
6  | use rp2040_hal::gpio::Pins;
   |
     and 3 other candidates

warning: unused import: `core::fmt::Write as FmtWrite`
 --> boards/rp-pico/examples/b_blinky.rs:6:5
  |
6 | use core::fmt::Write as FmtWrite;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `rp_pico::entry`
  --> boards/rp-pico/examples/b_blinky.rs:10:5
   |
10 | use rp_pico::entry;
   |     ^^^^^^^^^^^^^^

warning: unused imports: `Operation`, `Read`, `Transactional`, `WriteIter`, `Write`
  --> boards/rp-pico/examples/b_blinky.rs:21:35
   |
21 | use embedded_hal::blocking::i2c::{Operation, Read, Transactional, Write, WriteIter};
   |                                   ^^^^^^^^^  ^^^^  ^^^^^^^^^^^^^  ^^^^^  ^^^^^^^^^

warning: unused import: `embedded_hal::digital::v2::OutputPin`
  --> boards/rp-pico/examples/b_blinky.rs:11:5
   |
11 | use embedded_hal::digital::v2::OutputPin;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0412`.
warning: `rp-pico` (example "b_blinky") generated 4 warnings
error: could not compile `rp-pico` due to 3 previous errors; 4 warnings emitted
